package edu.fiuba.algo3.modelo;

public interface Direccion {

    void mover(Posicion posicion);

    Posicion obtenerPosicion(Posicion posicion);

}




