@startuml

class Mapa {
    - cantidadFilas: int
    - cantidadColumnas: int
    - posicionDestino: Posicion

}

class Vehiculo {
}

interface Direccion {
}

class Calle {
    - pos1 = Posicion
    - pos2 = Posicion
    - esHorizontal: boolean
}

abstract ObjetoCalle {
}

class Posicion {
    - x: int
    - y: int
}

class Vehiculo {
    - cantidadDeMovimientos: int
}

interface TipoVehiculo {
}

class BuscadorCalle {
    - calleNoPermitida: Calle
}




Mapa --> "1..*"Calle
Mapa ..> BuscadorCalle
Mapa --> Vehiculo
Mapa .>Direccion

Vehiculo .>BuscadorCalle

Posicion "1..*"<- Mapa
Posicion <- Vehiculo


Vehiculo *-- TipoVehiculo
Calle *-- "1..2"ObjetoCalle


@enduml